--- a/content/data/config.json
+++ b/content/data/config.json
@@ -6,7 +6,7 @@
         "title": "Fjord",
         "tagline": "Minimal and clean blog theme",
         "logo_img": "images/logo.png",
-        "background_img": "images/header-bg.jpg",
+        "background_img": "images/compressor.jpg",
         "has_nav": true,
         "nav_links": [
             {
