config.json: updated logo_img in header

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -5,7 +5,7 @@
     "header": {
         "title": "Fjord",
         "tagline": "Minimal and clean blog theme",
-        "logo_img": "images/logo.png",
+        "logo_img": "images/ca-logo.png",
         "background_img": "images/compressor.jpg",
         "has_nav": true,
         "nav_links": [
