--- a/content/data/config.json
+++ b/content/data/config.json
@@ -7,7 +7,7 @@
         "tagline": "Minimal and clean blog theme",
         "logo_img": "images/ca-logo.png",
         "background_img": "images/compressor.jpg",
-        "has_nav": true,
+        "has_nav": false,
         "nav_links": [
             {
                 "label": "Home",
