config.json: updated title in header

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -3,7 +3,7 @@
     "path_prefix": "/",
     "description": "A minimal blogging theme for Stackbit",
     "header": {
-        "title": "Fjord",
+        "title": "Culter Associates",
         "tagline": "Minimal and clean blog theme",
         "logo_img": "images/ca-logo.png",
         "background_img": "images/compressor.jpg",
